--- a/the_edge_training_board/pubspec.yaml
+++ b/the_edge_training_board/pubspec.yaml
@@ -21,6 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  provider: ^4.3.2+2
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.1
+  responsive_builder: ^0.3.0
   flutter:
     sdk: flutter
 
@@ -45,6 +49,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/logo.png
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
