--- a/the_edge_training_board/pubspec.yaml
+++ b/the_edge_training_board/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  fluro: ^2.0.3
   provider: ^4.3.2+2
   firebase_core: ^0.7.0
   firebase_auth: ^0.20.1
