--- a/the_edge_training_board/pubspec.yaml
+++ b/the_edge_training_board/pubspec.yaml
@@ -21,10 +21,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  file_picker: ^3.0.0
   fluro: ^2.0.3
   provider: ^4.3.2+2
-  firebase_core: ^0.7.0
-  firebase_auth: ^0.20.1
+  firebase_core: ^1.0.2
+  firebase_auth: ^1.0.1
   responsive_builder: ^0.3.0
   flutter:
     sdk: flutter
@@ -52,6 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
+    - assets/blank_profile.png
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
